# aplicativo

./: README.md
aplicativo/: README.md
aplicativo/golfinho_app_ws/: node_teleop.sh
aplicativo/golfinho_app_ws/install/: local_setup.sh  setup.sh
aplicativo/golfinho_app_ws/install/cpp_pub/lib/cpp_pub/: golfinho_teleop  listener  talker
aplicativo/golfinho_app_ws/install/cpp_pub/share/cpp_pub/: local_setup.sh  package.sh
aplicativo/golfinho_app_ws/log/: latest_build
aplicativo/golfinho_app_ws/myplaces/app/: build.gradle
aplicativo/golfinho_app_ws/myplaces/app/src/main/: AndroidManifest.xml
aplicativo/golfinho_app_ws/myplaces/app/src/main/java/com/example/myplaces/: MainActivity.java
aplicativo/golfinho_app_ws/myplaces/app/src/main/res/layout/: activity_main.xml
aplicativo/golfinho_app_ws/src/teleop/: CMakeLists.txt
aplicativo/golfinho_app_ws/src/teleop/src/: golfinho_teleop_node.cpp  publisher_member_function.cpp
